# GeometryWars

./: .gitignore  CMakeLists.txt  clean.sh  run.sh
engine/include/engine/: Color.hpp  Commands.hpp  Engine.hpp  Event.hpp  Input.hpp  Renderer.hpp  Texture.hpp  Window.hpp  action.hpp  color.hpp  command.hpp  commands.hpp  engine.hpp  font.hpp  input.hpp  rect.hpp  renderer.hpp  texture.hpp  window.hpp
engine/include/engine/components/: Components.hpp  Physics.hpp  Renderer.hpp  physics.hpp  renderer.hpp
engine/include/engine/core/: Action.hpp  Color.hpp  Commands.hpp  Event.hpp  Font.hpp  Input.hpp  Rect.hpp  Renderer.hpp  Texture.hpp  Window.hpp
engine/include/engine/ecs/: ComponentManager.hpp  Entity.hpp  EntityManager.hpp  EntitySet.hpp  Registry.hpp  SparseSet.hpp  SystemManager.hpp  entity.hpp  registry.hpp
engine/include/engine/systems/: systems.hpp
engine/src/core/: Commands.cpp  Entity.cpp  EntityManager.cpp  Font.cpp  Input.cpp  Renderer.cpp  Texture.cpp  Window.cpp  commands.cpp  font.cpp  input.cpp  rect.cpp  renderer.cpp  texture.cpp  window.cpp
engine/src/systems/: MovementSystems.cpp  RenderSystem.cpp
game/: Game.cpp  Game.hpp  game.cpp  game.hpp
src/: main.cpp
test/: CMakeLists.txt  TestComponentArray.cpp  TestComponents.cpp  TestEntity.cpp  TestRegistry.cpp  TestSystems.cpp  test.cpp
